<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistActivity">

    <ImageView
        android:id="@+id/playlistbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/playlistbg"
        android:scaleType="centerCrop"
        android:src="@drawable/playlistbg4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp"
        android:foreground="@drawable/foreground_shape"/>

    <TextView
        android:id="@+id/playlistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:fontFamily="@font/lobster"
        android:padding="1sp"
        android:text="@string/the_cozy_playlist"
        android:textColor="@color/ironstone"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/songCoverImageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/artist1"
        android:scaleType="centerCrop"
        android:src="@drawable/artist1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistTitle" />

    <TextView
        android:id="@+id/songTitleTextView1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/morning_bean_by_onion_all_stars"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songCoverImageView1" />



    <Button
        android:id="@+id/playButton1"
        android:layout_width="200dp"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:text="@string/play1"
        android:textColor="@color/ironstone"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/songTitleTextView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:background="@drawable/btn_bg_design"
        android:contentDescription="@string/play_song1"/>


    <ImageView
        android:id="@+id/songCoverImageView2"
        android:layout_width="100dp"
        android:contentDescription="@string/artist2"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/artist2"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/playButton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/songTitleTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cup_in_the_afternoon_by_mackey"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/songCoverImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/playButton2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/play2"
        android:textColor="@color/ironstone"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/songTitleTextView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:background="@drawable/btn_bg_design"
        android:contentDescription="@string/play_song2"/>

    <ImageView
        android:id="@+id/songCoverImageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/artist3"
        android:src="@drawable/artist3"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/playButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/songTitleTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oh_coffee_by_h_beats"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/songCoverImageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/playButton3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/play3"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="3dp"
        android:textColor="@color/ironstone"
        app:layout_constraintTop_toBottomOf="@id/songTitleTextView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:background="@drawable/btn_bg_design"
        android:contentDescription="@string/play_song3"/>

    <TextView
        android:id="@+id/exploreMenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_menu_to_explore_our_coffee_offerings"
        android:textColor="@color/ironstone"
        android:textSize="20sp"
        android:padding="1dp"
        android:textStyle="bold"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/playButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_design"
        android:text="@string/menu"
        android:textColor="@color/ironstone"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exploreMenuText" />


</androidx.constraintlayout.widget.ConstraintLayout>