<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image2"
        android:scaleType="centerCrop"
        android:src="@drawable/background6"
        />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/cozy_cups_cafe2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/paragraphTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/instructions"
        android:textColor="@color/ironstone"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/ironstone"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraphTextView"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintWidth_percent=".7"
        android:background="@drawable/btn_bg_design"
        />


</androidx.constraintlayout.widget.ConstraintLayout>